# mlcpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  iotensor.h  ioutils.h  utils.cpp  utils.h
classification_dlib/: CMakeLists.txt  README.md  classify_dlib.cpp
classification_shark/: CMakeLists.txt  README.md  class_iterator.h  classify_shark.cpp
classification_shogun/: CMakeLists.txt  README.md  classify_shogun.cpp
linear_regression/: CMakeLists.txt  linear_reg.cpp
linear_regression_gpu/: CMakeLists.txt
mask_rcnn_pytorch/: CMakeLists.txt  README.md  anchors.cpp  anchors.h  boxutils.cpp  boxutils.h  classifier.cpp  classifier.h  cocodataset.cpp  cocodataset.h  cocoloader.cpp  cocoloader.h  config.cpp  config.h  datasetclasses.cpp  datasetclasses.h  debug.cpp  debug.h  demo.cpp  detectionlayer.cpp  detectionlayer.h  detectiontargetlayer.cpp  detectiontargetlayer.h  fpn.cpp  fpn.h  imageutils.cpp  imageutils.h  loss.cpp  loss.h  main.cpp  mask.cpp  mask.h  maskrcnn.cpp  maskrcnn.h  nms.cpp  nms.h  nnutils.cpp  nnutils.h  proposallayer.cpp  proposallayer.h  (+13 more)
mask_rcnn_pytorch/nms/: nms.cpp  nms.h  nms_cuda.cpp  nms_cuda.h
mask_rcnn_pytorch/nms/cuda/: nms_kernel.cu  nms_kernel.h
mask_rcnn_pytorch/roialign/: crop_and_resize.cpp  crop_and_resize.h  crop_and_resize_gpu.cpp  crop_and_resize_gpu.h
mask_rcnn_pytorch/roialign/cuda/: crop_and_resize_kernel.cu  crop_and_resize_kernel.h
mask_rcnn_pytorch/tests/: anchor_test.cpp  nnutils_test.cpp  tests_main.cpp
polynomial_regression/: CMakeLists.txt  README.md  poly_reg.cpp
polynomial_regression_eigen/: CMakeLists.txt  README.md  poly_reg_eigen.cpp
polynomial_regression_gpu/: CMakeLists.txt  README.md  common.h  optimizer.h  poly_reg_gpu.cu  polynomial.h  standardizer.h
rcnn-mxnet/: CMakeLists.txt  README.md  anchorgenerator.cpp  anchorgenerator.h  anchorsampler.cpp  anchorsampler.h  bbox.cpp  bbox.h  coco.cpp  coco.h  get_model.sh  gputrainiter.cpp  gputrainiter.h  imagedb.cpp  imagedb.h  imageutils.cpp  imageutils.h  load_eval_ex.cpp  metrics.cpp  metrics.h  mxutils.cpp  mxutils.h  params.cpp  params.h  proposaltarget.cpp  proposaltarget.h  proposaltarget_op.cpp  proposaltarget_op.cu  proposaltarget_op.h  proposaltarget_op.hpp  rcnn.cpp  rcnn.h  rcnn_demo.cpp  rcnn_train.cpp  reporter.cpp  reporter.h  resnet.cpp  resnet.h  train.cpp  trainiter.cpp  (+1 more)
